--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
         <input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
         
-		<script src="../libs/three.min.js"></script>
+		<script src="./libs/three.min.js"></script>
 
-		<script src="../libs/inflate.min.js"></script>
-		<script src="../libs/FBXLoader.js"></script>
+		<script src="./libs/inflate.min.js"></script>
+		<script src="./libs/FBXLoader.js"></script>
 
-		<script src="../libs/OrbitControls.js"></script>
+		<script src="./libs/OrbitControls.js"></script>
 
-		<script src="game.js"></script>
+		<script src="./game.js"></script>
         
         <script>
             var game;
