--- a/index.html
+++ b/index.html
@@ -19,14 +19,23 @@
 	<body>
 		<button onclick="game.stopAnimation.call(game);">Stop All Animations</button>
 		<label for="animation1">Choose an animation (1):</label>
-		<select id="animation1" onChange="game.playAnimation.call(game, 0)">
-			<option value="0">Walking</option>
+		<select id="animation1" onChange="selectAnimation()">
+			<option value="0">Nothing</option>
+			<option value="1">Walk 1</option>
+			<option value="2">Walk 2</option>
+			<option value="3">Walk 3</option>
 		</select>
 		
         <button onclick="game.playAnimation.call(game, 0);">Play animation</button>
         <button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
         <input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
-        
+		<label for="animation2">Choose an animation (2):</label>
+		<select id="animation1" onChange="selectAnimation()">
+			<option value="0">Nothing</option>
+			<option value="1">Walk 1</option>
+			<option value="2">Walk 2</option>
+			<option value="3">Walk 3</option>
+		</select>
 		<script src="./libs/three.min.js"></script>
 
 		<script src="./libs/inflate.min.js"></script>
