--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
 	</head>
 
 	<body>
+		<button onclick="game.playAnimation.call(game, 0);">Play animation 1 </button>
+		<button onclick="game.playAnimation.call(game, 1);">Play animation 2 </button>
+		<button onclick="game.playAnimation.call(game, 2);">Play animation 3 </button>
 		<button onclick="game.stopAnimation.call(game);">Stop All Animations</button>
 		<label for="animation1">Choose an animation (1):</label>
-		<select id="animation1" onChange="selectAnimation()">
+		<select id="animation1" onChange="game.blendAnimations.call(game, animation1.value, animation2.value, this.value)">
 			<option value="0">Nothing</option>
 			<option value="1">Walk 1</option>
 			<option value="2">Walk 2</option>
 			<option value="3">Walk 3</option>
 		</select>
 		
-        <button onclick="game.playAnimation.call(game, 0);">Play animation</button>
+
         <button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
-        <input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
+        <input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, animation1.value, animation2.value, this.value)" />
 		<label for="animation2">Choose an animation (2):</label>
-		<select id="animation1" onChange="selectAnimation()">
+		<select id="animation2" onChange="game.blendAnimations.call(game, animation1.value, animation2.value, this.value)">
 			<option value="0">Nothing</option>
 			<option value="1">Walk 1</option>
 			<option value="2">Walk 2</option>
@@ -47,12 +50,6 @@
         
         <script>
             var game;
-			function selectAnimation(){
-				hideAll();
-				var val1 = document.getElementById("animation1").value;
-				var val2 = document.getElementById("animation2").value;
-				game.playAnimation.call(game, val1);
-			}	
             document.addEventListener("DOMContentLoaded", function(){
                 game = new Game(); 
 				window.game = game;
