--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<body>
 
         <button onclick="game.stopAnimation.call(game);">Stop All Animations</button>
-        <button onclick="game.playAnimation.call(game, 0);">Play animation 1 (walk)</button>
-        <button onclick="game.playAnimation.call(game, 1);">Play animation 2 (run)</button>
+        <button onclick="game.playAnimation.call(game, 0);">Play animation 1 </button>
+        <button onclick="game.playAnimation.call(game, 1);">Play animation 2 </button>
         <button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
 		<input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
 		
