--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	</head>
 
 	<body>
-
-        <button onclick="game.stopAnimation.call(game);">Stop All Animations</button>
-        <button onclick="game.playAnimation.call(game, 0);">Play animation 1 </button>
-        <button onclick="game.playAnimation.call(game, 1);">Play animation 2 </button>
-        <button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
-		<input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
-		
+		<div class ="p-1">
+			<button onclick="game.stopAnimation.call(game);">Stop All Animations</button>
+			<button onclick="game.playAnimation.call(game, 0);">Play animation 1 </button>
+			<button onclick="game.playAnimation.call(game, 1);">Play animation 2 </button>
+			<button onclick="game.blendAnimations.call(game, 0.5);">Blend animations</button>
+			<input type="range" min="0" max="1" step="0.05"  onchange="game.blendAnimations.call(game, this.value)" />
+		</div>
 		<script src="./libs/three.min.js"></script>
 
 		<script src="./libs/inflate.min.js"></script>
